# fdb-grpc

./: Cargo.toml  README.md  build.rs
.github/workflows/: ci.yml
proto/: fdb.proto
src/: lib.rs  server.rs
